NATTQA-ENV/force-app/main/default/objects/CONTAINER_CTD_Region__mdt/CONTAINER_CTD_Region__mdt.object-meta.xml
<CustomObject>
    <description>This Metadata type is created for fetching the CTD address in Commissioning and ASO template.</description>
    <label>CONTAINER CTD Region</label>
    <pluralLabel>CONTAINER CTD Region</pluralLabel>
</CustomObject>