NATTQA-ENV/force-app/main/default/objects/CONTAINER_CTD_Region__mdt/fields/CONTAINER_CTD_Address__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Address__c</fullName>
    <label>CTD Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>