NATTQA-ENV/force-app/main/default/objects/CONTAINER_CTD_Region__mdt/fields/CONTAINER_CTD_Attention__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Attention__c</fullName>
    <description>Custom field for CTD address</description>
    <label>CTD Attention</label>
    <length>225</length>
    <type>Text</type>
</CustomField>