NATTQA-ENV/force-app/main/default/objects/CONTAINER_CTD_Region__mdt/fields/CONTAINER_CTD_Email__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CTD_Email__c</fullName>
    <description>Custom field for CTD address</description>
    <label>CTD Email</label>
    <type>Email</type>
</CustomField>